# vpn-hub

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json
.github/workflows/: rust.yml  windows-release-foundation.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx  Dashboard.tsx  HistoryPage.tsx  NodesPage.tsx  SettingsPage.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  entry_switch_windows.rs  lib.rs  lifecycle.rs  main.rs  runtime.rs
apps/desktop/src/components/: EventTimeline.tsx  LatencyChart.tsx  OutletTable.tsx  ProtectedBanner.tsx  RouteRail.tsx  Sidebar.tsx  StatusBar.tsx
apps/desktop/src/data/: mock.ts
apps/desktop/src/lib/: bridge.ts  entrySwitchModel.d.ts  entrySwitchModel.js  entrySwitchModel.test.mjs  guardianEventModel.test.mjs  requestGeneration.d.ts  requestGeneration.js  requestGeneration.test.mjs  settingsModel.d.ts  settingsModel.js  settingsModel.test.mjs  subscriptionNodesModel.d.ts  subscriptionNodesModel.js  subscriptionNodesModel.test.mjs
config/: development.toml  example.toml  private-routing.example.toml
config/mihomo/: development.yaml
crates/vpn-hub-cli/: Cargo.toml
crates/vpn-hub-cli/src/: main.rs
crates/vpn-hub-core/: Cargo.toml
crates/vpn-hub-core/src/: config.rs  controller.rs  durable.rs  entry_switch.rs  guardian_cycle.rs  history.rs  lib.rs  mihomo.rs  model.rs  probe.rs  probe_schedule.rs  routing.rs  secret_store.rs  settings.rs  store.rs  udp_capability.rs
crates/vpn-hub-core/tests/: dynamic_fault_acceptance.rs
crates/vpn-hub-helper/: Cargo.toml
crates/vpn-hub-helper/src/: authority.rs  install_plan.rs  installation.rs  lib.rs  main.rs  manifest.rs  ownership.rs  protocol.rs  release.rs  runtime.rs  service_shell.rs  status.rs  supervisor.rs  transport.rs  tun.rs
crates/vpn-hub-windows-security/: Cargo.toml
crates/vpn-hub-windows-security/src/: lib.rs
docs/: adr-004-fast-config-commit.md  adr-005-isolated-subscription-probe.md  decisions.md  design.md  desktop-design-system.md  development.md  guardian.md  issue-10-desktop-lifecycle.md  issue-11-udp-capabilities.md  issue-12-safe-entry-switch.md  issue-13-windows-helper.md  issue-14-dynamic-tun.md  issue-15-release-foundation.md  issue-29-subscription-node-selection.md  issue-3-dual-outlet.md  issue-32-owned-core-settings-reload.md  issue-33-settings-impact.md  issue-34-node-latency-tests.md  issue-42-fast-config-path.md  issue-43-small-app-ui.md  issue-45-adaptive-probes.md  issue-5-dynamic-fault-acceptance.md  issue-6-windows-secret-store.md  issue-7-dynamic-outlets.md  issue-8-history-analytics.md  issue-9-settings-management.md  mihomo-development.md  roadmap.md
docs/compatibility/: 2026-07-18-chaoshihui.md  2026-07-18-issue-3-live-subscription.md  2026-07-18-issue-3-local-controller.md  2026-07-18-local-client.md  2026-07-18-mihomo-chain.md
docs/qa/: desktop-fidelity-ledger.md
scripts/: check-generic-client-names.mjs  check-markdown-links.mjs  fetch-mihomo.ps1  run-isolated-fault-acceptance.ps1  start-mihomo-development.ps1
scripts/release/: assert-fresh-build-root.mjs  capture-build-environment.ps1  check-promotion.mjs  compare-builds.mjs  generate-materials.mjs  release-lib.mjs  release-lib.test.mjs  sbom-lib.mjs  sbom-lib.test.mjs  sensitive-scan.mjs  validate-materials.mjs
tools/: mihomo.lock.json
