[workspace]
members = ["crates/vpn-hub-cli", "crates/vpn-hub-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/coconilu/vpn-hub"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "socks"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.53.0", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
toml = "1.1.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
