[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/vpn-hub-cli",
    "crates/vpn-hub-core",
    "crates/vpn-hub-helper",
    "crates/vpn-hub-windows-security",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/coconilu/vpn-hub"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
fs2 = "0.4.3"
hmac = "0.12.1"
process-wrap = { version = "9.1.0", default-features = false, features = ["tokio1"] }
keyring-core = "1.0.0"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "socks", "json"] }
rand = "0.9.2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.53.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "1.1.3"
windows-native-keyring-store = { version = "1.1.0", default-features = false }
windows-permissions = "0.2.4"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Threading"] }
zeroize = "1.8.2"
windows-service = "0.8.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
