[package]
name = "vpn-hub-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
vpn-hub-core = { path = "../vpn-hub-core" }

[lints]
workspace = true
