[package]
name = "vpn-hub-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
hmac.workspace = true
rand.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
zeroize.workspace = true

[target.'cfg(windows)'.dependencies]
keyring-core.workspace = true
windows-native-keyring-store.workspace = true

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
