[package]
name = "vpn-hub-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "vpn_hub_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.11.5", features = [] }
tokio.workspace = true
vpn-hub-core = { path = "../../../crates/vpn-hub-core" }

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
